# Firmware

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  main.h
main/Communication/: CMakeLists.txt  http_request.c  wifi.c
main/Communication/SD_card/: CMakeLists.txt  memory.c
main/Communication/libs/: data_queue.h  memory.h
main/Sensors/Payload/: CMakeLists.txt  plate_temperature.c  plate_voltage.c  pulse_counter.c
main/Sensors/Telemetry/: CMakeLists.txt  batery_level.c  i2c.c
main/Sensors/Telemetry/libs/: batery_level.h  i2c.h
main/payload/: contador_geiger.c  nivel_bateria.c
main/sensores/sensores_i2c/: CMakeLists.txt  i2c.c  i2c.h
main/sensores/temperatura_ds18b20/: ds18b20_cod.c
main/servidor/: http_client.c  wifi.c
