idf_component_register(SRCS "main.c" "Sensors/Payload/plate_temperature.c" "Sensors/Payload/plate_voltage.c" "Communication/wifi.c" "Communication/http_request.c" "Sensors/Payload/pulse_counter.c" "Sensors/Telemetry/i2c.c" "Sensors/Telemetry/batery_level.c" "Communication/SD_card/memory.c"
                    INCLUDE_DIRS ".")
